# converlex

./: Cargo.toml  build.rs  vcpkg.json
src/: app_data.rs  combobox.rs  config_window.rs  convert.rs  convert_config.rs  dark_theme.css  light_theme.css  main.rs  style.css  utils.rs
src/controllers/main/: app_data.rs  app_event.rs  mod.rs
src/macros/: def_formats.rs  mod.rs
src/models/: app_settings.rs  convert_config.rs  convertible_format.rs  media_format.rs  mod.rs  task.rs  task_type.rs
src/utils/: convert.rs  ffmpeg_wrapper.rs  fs.rs  mod.rs  process_filter.rs  utils.rs
src/view/components/: task_item_row.rs
src/view/styles/: style.css
src/view/windows/: config_window.rs
src/views/: mod.rs
src/views/pages/: mod.rs  task_config_page.rs
src/views/styles/: light_theme.css  style.css
src/views/windows/: config_window.rs  format_selector_window.rs  mod.rs  msgbox.rs  setting_window.rs  task_config_window.rs
