[package]
name = "converlex"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.98"
futures-util = "0.3.31"
rfd = "0.15.3"
tokio = { version = "1.44.2", features = ["full", "macros"] }
uuid = { version = "1.16.0", features = ["v4"] }
vizia = { git = "https://github.com/vizia/vizia" }
# vizia = { path = "D:/src/vizia" }
# ez-ffmpeg = { version = "0.4", features = ["async"] }
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.27"